fix(material-experimental/mdc-button): high contrast outline for solitary (#22987)
icon-buttons

The high-contrast style for all buttons was previously defined in
`button.scss`, but icon-buttons load `icon-button.scss`. This means that
the high contrast style for icon buttons was only loaded when another
type of button was on the page. This change moves the high-contrast styles to their own file that's referenced from buttons and icon-buttons (but not FABs).

--- a/src/material-experimental/mdc-button/button.scss
+++ b/src/material-experimental/mdc-button/button.scss
@@ -2,7 +2,6 @@
 @use '@material/button/variables' as mdc-button-variables;
 @use '../../material/core/style/private';
 @use '../mdc-helpers/mdc-helpers';
-@use '../../cdk/a11y';
 @use 'button-base';
 
 
@@ -39,24 +38,6 @@
 
   .mdc-button__label + .mat-icon {
     @include mdc-button.icon-contained-trailing();
-  }
-}
-
-// Add an outline to make buttons more visible in high contrast mode. Stroked buttons and FABs
-// don't need a special look in high-contrast mode, because those already have an outline.
-.mat-mdc-button:not(.mdc-button--outlined),
-.mat-mdc-unelevated-button:not(.mdc-button--outlined),
-.mat-mdc-raised-button:not(.mdc-button--outlined),
-.mat-mdc-outlined-button:not(.mdc-button--outlined),
-.mat-mdc-icon-button {
-  @include a11y.high-contrast(active, off) {
-    outline: solid 1px;
-  }
-}
-
-@include a11y.high-contrast(active, off) {
-  .mat-mdc-button-base:focus {
-    outline: solid 3px;
   }
 }
 
